# tagstormdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  create-invitation-code.py  create-user-table.py  create_user_table.py  flatbuffers.fbs  truncate_log.py
src/: binary_format.rs  database.rs  errors.rs  lib.rs  newtype_macros.rs  search-grammar.pest  search.rs  small_db.rs  small_db_deserializer.rs  small_db_errors.rs  small_db_serializer.rs
tests/: integration_test.rs  server_integration_tests.rs
