[package]
name = "tagstormdb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
anyhow = "1"
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
indexmap = "2"
indicatif = "0.17"
itertools = "0.13"
log = "0.4"
md-5 = "0.10"
ordered-float = "4.5"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "tls-rustls"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
actix-cors = "0.7"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
globset = "0.4"
image = "0.25"
mime = "0.3"
async-stream = "0.3.6"
reqwest = { version = "0.12", features = ["rustls-tls", "multipart", "http2", "charset", "json"], default-features = false }
actix-multipart = "0.6"
pathdiff = "0.2"
flatbuffers = "24.3.25"
hmac = "0.12.1"
data-encoding = "2.6.0"
thiserror = "2.0.3"
scrypt = "0.11.0"
tikv-jemallocator = "0.6.0"

[profile.release]
debug = true
